# LovelacePM

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  MANIFEST.in  Makefile  README.md  VERSION_NOTES.txt  __init__.py  aerodynamic_output.py  aircraft.py  body.py  control.py  paneller.py  setup.py  test.py  testcase.m  testcase.txt  testcase_airfoil.py  testcase_control.py  testcase_fullconfig.py  testcase_n65415.py  testcase_plate.py  testcase_random.py  testcase_sd7062.py  testcase_sphere.py  testcase_wingonly_fullconfig.py  toolkit.f90  utils.py  wing.py  xfoil_visc.py
LovelacePM/: Makefile  __init__.py  aerodynamic_output.py  aircraft.py  body.py  control.py  documentation.py  fdyn.f90  monoplane.py  multiprocess_guard.py  paneller.py  pyfdyn.py  pytoolkit.py  test.py  testcase_airfoil.py  testcase_cilynder.py  testcase_control.py  testcase_fullconfig.py  testcase_n0012_AR20.py  testcase_n0012_rotating.py  testcase_n65415.py  testcase_oneram6.py  testcase_plate.py  testcase_random.py  testcase_sd7062.py  testcase_sphere.py  testcase_wingonly_fullconfig.py  toolkit.f90  utils.py  wing.py  xfoil_visc.py
