cmake_minimum_required(VERSION 3.11.0)
project(LovelacePM)
enable_language(Fortran)
find_package(PythonExtensions REQUIRED)

add_library(toolkit MODULE LovelacePM/toolkit.f90)
python_extension_module(toolkit)
install(TARGETS toolkit LIBRARY DESTINATION LovelacePM)
add_library(fdyn MODULE LovelacePM/fdyn.f90)
python_extension_module(fdyn)
install(TARGETS fdyn LIBRARY DESTINATION LovelacePM)